@@ -57,6 +57,7 @@ public class Lwjgl3ApplicationConfiguration {
 	int windowY = -1;
 	int windowWidth = 640;
 	int windowHeight = 480;
+	int windowMinWidth = -1, windowMinHeight = -1, windowMaxWidth = -1, windowMaxHeight = -1;
 	boolean windowResizable = true;
 	boolean windowDecorated = true;
 	Lwjgl3WindowListener windowListener;
@@ -91,6 +92,10 @@ public class Lwjgl3ApplicationConfiguration {
 		copy.windowY = config.windowY;
 		copy.windowWidth = config.windowWidth;
 		copy.windowHeight = config.windowHeight;
+		copy.windowMinWidth = config.windowMinWidth;
+		copy.windowMinHeight = config.windowMinHeight;
+		copy.windowMaxWidth = config.windowMaxWidth;
+		copy.windowMaxHeight = config.windowMaxHeight;
 		copy.windowResizable = config.windowResizable;
 		copy.windowDecorated = config.windowDecorated;
 		copy.windowListener = config.windowListener;
@@ -219,6 +224,17 @@ public class Lwjgl3ApplicationConfiguration {
 	public void setWindowPosition(int x, int y) {
 		windowX = x;
 		windowY = y;
+	}
+	
+	/**
+	 * Sets minimum and maximum size limits for the window. If the window is full screen or not resizable, these 
+	 * limits are ignored. The default for all four parameters is -1, which means unrestricted.
+	 */
+	public void setWindowSizeLimits(int minWidth, int minHeight, int maxWidth, int maxHeight) {
+		windowMinWidth = minWidth;
+		windowMinHeight = minHeight;
+		windowMaxWidth = maxWidth;
+		windowMaxHeight = maxHeight;
 	}
 	
 	/**
